prevent horizontal scrolling for every long links

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -85,6 +85,8 @@ b {
 
 p {
   text-wrap: pretty;
+  overflow-wrap: break-word;
+  max-width: 100%;
 }
 
 /* Links
@@ -92,6 +94,8 @@ p {
 a {
   color: var(--text-color); 
   transition: color 170ms ease-in-out;
+  overflow-wrap: break-word;
+  max-width: 100%;
 }
 a:hover {
   color: var(--link-hover-color);
